# PureHTTP

./: .gitignore  Cargo.toml  tauri.conf.json
.github/workflows/: build.yml
requests/: pet3.json
src/: main.rs
